--- a/app/src/main/res/layout/user_list_item.xml
+++ b/app/src/main/res/layout/user_list_item.xml
@@ -4,60 +4,58 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/statusbar"
-    android:backgroundTint="@color/statusbar">
-
+    android:layout_marginTop="@dimen/_4sdp"
+    app:cardCornerRadius="@dimen/_16sdp"
+    style="@style/app_theme">
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-
-        android:background="@drawable/background_for_home">
+        android:layout_height="wrap_content"
+        android:background="@color/md_theme_light_secondaryContainer">
+<!--        android:background="#F2FDFF"-->
 
         <de.hdodenhof.circleimageview.CircleImageView
-            android:id="@+id/current_user_profile_image"
-            android:layout_width="67dp"
-            android:layout_height="68dp"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/current_user_profile_image"
             android:layout_marginStart="@dimen/_10sdp"
             android:layout_marginTop="@dimen/_11sdp"
-            android:src="@mipmap/logo"
-            app:civ_border_color="@color/md_theme_light_secondary"
-            app:civ_border_width="0dp" />
+        android:layout_width="@dimen/_45sdp"
+        android:layout_height="@dimen/_45sdp"
+        android:src="@mipmap/logo"
+        app:civ_border_width="@dimen/_1sdp"
+        app:civ_border_color="#39000000"/>
+    <LinearLayout
 
-        <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="@dimen/_1sdp"
+        android:orientation="vertical">
+        <TextView
+            android:textColor="@color/black"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="@dimen/_1sdp"
-            android:orientation="vertical">
-
-            <TextView
-                android:id="@+id/name"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/_6sdp"
-                android:layout_marginTop="@dimen/_4sdp"
-                android:layout_marginEnd="@dimen/_10sdp"
-                android:layout_marginBottom="0dp"
-                android:lines="1"
-                android:padding="@dimen/_3sdp"
-                android:paddingTop="0dp"
-                android:text="Name as it should."
-                android:textColor="@color/black"
-                android:textSize="@dimen/_15ssp"
-                android:textStyle="bold" />
-
-            <TextView
-                android:id="@+id/msg"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/_9sdp"
-                android:layout_marginTop="0dp"
-                android:layout_marginEnd="@dimen/_11sdp"
-                android:layout_marginBottom="@dimen/_11sdp"
-                android:lines="1"
-                android:padding="@dimen/_3sdp"
-                android:text="@string/message_should_be_displayed_here"
-                android:textColor="@color/lightgray"
-                android:textSize="@dimen/_10ssp" />
-        </LinearLayout>
-    </LinearLayout>
+            android:paddingTop="0dp"
+            android:lines="1"
+            android:layout_marginStart="@dimen/_6sdp"
+            android:layout_marginEnd="@dimen/_10sdp"
+            android:layout_marginTop="@dimen/_4sdp"
+            android:layout_marginBottom="0dp"
+            android:padding="@dimen/_3sdp"
+            android:text="Name as it should."
+            android:textSize="@dimen/_15ssp"
+            android:textStyle="bold"
+            android:id="@+id/name"/>
+        <TextView
+            android:textColor="@color/black"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:lines="1"
+            android:layout_marginStart="@dimen/_9sdp"
+            android:layout_marginEnd="@dimen/_11sdp"
+            android:layout_marginBottom="@dimen/_11sdp"
+            android:layout_marginTop="0dp"
+            android:padding="@dimen/_3sdp"
+            android:textSize="@dimen/_12ssp"
+            android:text="@string/message_should_be_displayed_here"
+            android:id="@+id/msg" />
+    </LinearLayout></LinearLayout>
 </androidx.cardview.widget.CardView>
