--- a/app/src/main/res/layout/login_tab_fragment.xml
+++ b/app/src/main/res/layout/login_tab_fragment.xml
@@ -38,6 +38,7 @@
             android:layout_marginRight="20dp"
             android:paddingLeft="20dp"
             android:paddingBottom="10dp"
+            android:inputType="phone"
             android:paddingTop="10dp"
             android:paddingRight="20dp"
             android:background="@drawable/round_back_white"/>
@@ -57,6 +58,7 @@
             android:hint="@string/OTP"
             android:paddingLeft="20dp"
             android:paddingTop="10dp"
+            android:inputType="number"
             android:paddingBottom="10dp"
             android:paddingRight="20dp"
             android:background="@drawable/round_back_white"/>
