--- a/app/src/main/res/layout/activity_chat_room.xml
+++ b/app/src/main/res/layout/activity_chat_room.xml
@@ -6,7 +6,6 @@
     android:id="@+id/activity_chat_room"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/purple_200"
     android:clickable="true"
     style="@style/chat_room">
 
@@ -23,8 +22,7 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="horizontal"
-            android:background="@color/purple_200">
+            android:orientation="horizontal">
 
             <de.hdodenhof.circleimageview.CircleImageView
                 android:id="@+id/recImg"
@@ -32,15 +30,12 @@
                 android:layout_height="50dp"
                 android:layout_gravity="center"
                 android:layout_margin="12dp"
-                android:layout_marginStart="60dp"
+                android:layout_marginStart="12dp"
                 android:layout_marginTop="12dp"
                 android:layout_marginBottom="12dp"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toStartOf="@+id/vidCall"
-                app:layout_constraintHorizontal_bias="0.122"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.0"
                 app:shapeAppearanceOverlay="@style/roundedImageView" />
 
             <TextView
@@ -48,12 +43,12 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
-                android:layout_marginStart="24dp"
+                android:layout_marginStart="20dp"
                 android:layout_marginTop="16dp"
                 android:foregroundGravity="center_vertical"
                 android:gravity="center_vertical"
                 android:text="TextView"
-                android:textColor="@color/lightgray"
+                android:textColor="@color/md_theme_dark_onPrimary"
                 android:textSize="22sp"
                 app:layout_constraintStart_toEndOf="@+id/recImg"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -65,24 +60,23 @@
                 android:layout_gravity="center_vertical"
                 android:layout_marginTop="12dp"
                 android:layout_marginEnd="12dp"
-                android:background="#99B7C5"
+                android:background="@android:color/transparent"
                 android:contentDescription="video call"
                 android:foregroundGravity="center_vertical"
                 android:minWidth="48dp"
-                android:backgroundTint="@color/purple_200"
                 android:minHeight="48dp"
                 android:padding="@dimen/_12ssp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:srcCompat="@drawable/ic_videocam_24" />
+                app:srcCompat="@android:drawable/presence_video_online" />
 
             <TextView
                 android:id="@+id/lastSeen"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="60dp"
-                android:layout_marginTop="4dp"
-                android:textColor="@color/lightgray"
+                android:textColor="@color/colorOnPrimary"
+                android:layout_marginStart="22dp"
+                android:layout_marginTop="5dp"
                 android:textSize="@dimen/_10ssp"
                 app:layout_constraintStart_toEndOf="@+id/recImg"
                 app:layout_constraintTop_toBottomOf="@+id/TVname"
@@ -99,15 +93,13 @@
         app:layout_constraintBottom_toTopOf="@id/ETchatbox"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/chatBar"
-        app:layout_constraintVertical_bias="0.0"
-        android:background="@drawable/recyclerviwe_background">
+        app:layout_constraintVertical_bias="0.0">
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recycler_chat"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             app:layout_constrainedHeight="true"
-
             android:elevation="0dp" />
     </FrameLayout>
 
@@ -123,9 +115,9 @@
     <View
         android:id="@+id/view"
         android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="#FFFFFF"
-        app:layout_constraintBottom_toTopOf="@+id/ETchatbox" />
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toTopOf="@+id/ETchatbox"
+        android:visibility="invisible"/>
 
     <RelativeLayout
         android:id="@+id/ETchatbox"
@@ -163,6 +155,7 @@
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:id="@+id/sendBtn"
+            style="@style/Widget.Material3.FloatingActionButton.Secondary"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
@@ -170,14 +163,12 @@
             android:layout_marginTop="12dp"
             android:layout_marginEnd="12dp"
             android:layout_marginBottom="12dp"
-            android:contentDescription="Send message"
             android:backgroundTint="@color/md_theme_dark_secondary"
-            style="@style/Widget.Material3.FloatingActionButton.Secondary"
+            android:contentDescription="Send message"
             android:src="@drawable/ic_baseline_send_24"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:tint="@color/design_default_color_on_primary" />
-
 
         <Chronometer
             android:layout_width="wrap_content"
@@ -189,6 +180,7 @@
             android:id="@+id/timer"
             android:elevation="@dimen/_100sdp"
             android:visibility="invisible"/>
+
     </RelativeLayout>
 
 
