--- a/app/src/main/res/layout/mainpattern.xml
+++ b/app/src/main/res/layout/mainpattern.xml
@@ -136,15 +136,15 @@
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/cancel_button"
-        android:layout_width="wrap_content"
-        android:layout_height="61dp"
+        android:layout_width="210dp"
+        android:layout_height="32dp"
         android:layout_below="@+id/patternLockView"
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:layout_marginStart="104dp"
-        android:layout_marginTop="3dp"
+        android:layout_marginTop="32dp"
         android:layout_marginEnd="97dp"
         android:layout_marginBottom="22dp"
         android:background="@drawable/custtom_button"
@@ -168,14 +168,14 @@
 
     <com.airbnb.lottie.LottieAnimationView
         android:id="@+id/Use_finger_print"
-        android:layout_width="wrap_content"
-        android:layout_height="108dp"
+        android:layout_width="161dp"
+        android:layout_height="124dp"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:layout_marginStart="138dp"
-        android:layout_marginTop="110dp"
+        android:layout_marginTop="93dp"
         android:layout_marginEnd="129dp"
         android:layout_marginBottom="514dp"
         android:text="@string/use_fingerprint"
