--- a/app/src/main/res/layout/user_msg.xml
+++ b/app/src/main/res/layout/user_msg.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginEnd="8dp"
@@ -11,7 +10,7 @@
         android:id="@+id/card_userMsg"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:cardBackgroundColor="@color/lightgray"
+        app:cardBackgroundColor="@color/md_theme_light_secondaryContainer"
         app:cardCornerRadius="18dp"
         app:cardElevation="0dp"
         app:cardPreventCornerOverlap="false"
@@ -22,8 +21,7 @@
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:padding="@dimen/_8sdp">
+            android:layout_height="wrap_content">
 
             <LinearLayout
                 android:id="@+id/layout_container_user"
@@ -39,6 +37,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="8dp"
                     android:maxWidth="260dp"
+                    android:textColor="@color/black"
                     android:paddingLeft="12dp"
                     android:paddingTop="@dimen/_3sdp"
                     android:paddingRight="12dp"
@@ -50,33 +49,22 @@
 
             <ImageView
                 android:id="@+id/imageView"
-                android:layout_width="16dp"
-                android:layout_height="15dp"
-
-                android:layout_marginStart="4dp"
-                android:layout_marginTop="4dp"
-                android:contentDescription="TODO"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:scaleX="-.6"
+                android:scaleY=".6"
+                android:layout_marginStart="@dimen/_2sdp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/layout_container_user"
-                app:srcCompat="@drawable/ic_check_bold_24dp"
-                app:tint="@color/md_theme_dark_secondary" />
-
-            <ImageView
-                android:id="@+id/imageView2"
-                android:layout_width="18dp"
-                android:layout_height="12dp"
-                android:layout_marginStart="4dp"
-                android:layout_marginTop="8dp"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/layout_container_user"
-                app:srcCompat="@drawable/ic_check_bold_24dp"
-                app:tint="@color/md_theme_dark_secondary" />
+                app:srcCompat="@drawable/ic_baseline_send_24"
+                app:tint="@color/md_theme_dark_secondary"/>
 
             <TextView
                 android:id="@+id/TVuser_ts"
-                android:layout_width="45dp"
-                android:layout_height="16dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/_3ssp"
+                android:layout_marginEnd="@dimen/_7ssp"
                 android:layout_marginTop="@dimen/_3ssp"
                 android:text="10:00"
                 android:textColor="@color/md_theme_light_secondary"
@@ -85,6 +73,7 @@
                 app:layout_constraintTop_toBottomOf="@+id/layout_container_user" />
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
+
 
 
 
